@@ -1,3 +1,0 @@
-.*: Assembler messages:
-.*:2: Error: .*
-.*:3: Error: .*
