@@ -1,3 +1,0 @@
-	.data
-	.quad	xtrn + 0x80000000
-	.quad	xtrn - 0x80000001
