@@ -178,6 +178,7 @@ bad	.byte	xtrn@tpoff
 
 	.text
 	mov	xtrn@tpoff (%rbx), %eax
+	movabsq	$xtrn - 4294967295, %rbp
 
 	.data
 	.quad	xtrn
