@@ -1,3 +1,13 @@
+2012-05-12  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/ilp32/ilp32.exp: Don't run reloc64-inval.
+
+	* gas/i386/ilp32/reloc64.s: Add test for -4294967295 addend.
+	* gas/i386/ilp32/reloc64.d: Updated.
+
+	* gas/i386/ilp32/reloc64-inval.l: Removed.
+	* gas/i386/ilp32/reloc64-inval.s: Likewise.
+
 2012-05-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/ilp32/ilp32.exp: Run reloc64-inval.
